add_executable(default_template_params_test default_template_params_test.cpp)

add_library(extern_template_instance extern_template_instance1.cpp extern_template_instance2.cpp)

add_library(anonymous_type anonymous_type.cpp)

add_executable(metaprogram_test metaprogram_test.cpp)

add_executable(variadic_templates variadic_templates.cpp)